--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,10 @@
     font-family: 'Arial';
 }
 
+a {
+    text-decoration: none;
+}
+
 body {
     padding-bottom: 300px;
 }
@@ -174,7 +178,7 @@ nav a:hover {
 
 .widget_body {
     display: flex;
-    gap: 30px;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
@@ -185,6 +189,7 @@ nav a:hover {
 }
 
 .widget_area {
+    margin: 7px;
     width: 150px;
     height: 150px;
     background-color: #36a9e1;
@@ -206,4 +211,56 @@ nav a:hover {
     width: 325px;
     height: 1px;
     background-color: #ccc;
+}
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+article {
+    flex: 1;
+    min-width: 300px;
+    margin-right: 20px;
+}
+
+article .news_data {
+    display: flex;
+}
+
+article .news_posted_at {
+    color: #fff;
+    background-color: #2b4c99;
+    font-size: 12px;
+    padding: 10px;
+    margin-right: 2px;
+}
+
+article .news_comments {
+    color: #fff;
+    background-color: #39aae1;
+    font-size: 12px;
+    padding: 10px;
+}
+
+article .news_thumbnail {
+    margin-top: 30px;
+}
+
+article .news_thumbnail img {
+    width: 100%;
+    height: auto;
+}
+
+article .news_title {
+    margin: 25px 0;
+    color: #000;
+    font-size: 25px;
+}
+
+article .news_resume {
+    color: #5c5c5c;
+    line-height: 21px;
+    font-size: 14px;
+    margin-bottom: 30px;
 }
