--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,10 +9,6 @@ a {
     text-decoration: none;
 }
 
-body {
-    padding-bottom: 300px;
-}
-
 header {
     display: flex;
     justify-content: center;
@@ -185,7 +181,7 @@ nav a:hover {
 .widget_body p {
     font-size: 13px;
     color: #727272;
-    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 .widget_area {
@@ -198,9 +194,10 @@ nav a:hover {
 .contact {
     display: flex;
     align-items: center;
-    gap: 10px;
     color: #727272;
     font-size: 13px;
+    margin: 20px 0;
+    gap: 10px;
 }
 
 .contact strong {
@@ -263,4 +260,133 @@ article .news_resume {
     line-height: 21px;
     font-size: 14px;
     margin-bottom: 30px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    background-color: #1e1e1e;
+}
+
+.footer_menu {
+    display: flex;
+}
+
+.footer_menu a {
+    display: block;
+    padding: 20px;
+    color: #fff;
+}
+
+.fm_1, .fm_2, .fm_3 {
+    flex: 1;
+    color: #fff;
+}
+
+.fm_1 {
+    background-color: #39aae1;
+}
+
+.fm_2 {
+    background-color: #0079c7;
+}
+
+.fm_3 {
+    background-color: #2b4c99;
+}
+
+.footer_area {
+    display: flex;
+}
+
+.footer_areaitem {
+    color: #fff;
+    flex: 1;
+}
+
+.flexColumn {
+    flex-direction: column;
+}
+
+footer .widget_title_text {
+    color: #fff;
+}
+
+.footer_copy {
+    border-top: 1px solid #2c2c2c;
+    height: 40px;
+    line-height: 40px;
+    color: #5c5c5c;
+    font-size: 12px;
+    margin-top: 30px;
+}
+
+.widget_footer_resume {
+    color: #5c5c5c;
+    line-height: 20px;
+    font-size: 14px;
+    margin-bottom: 30px;
+}
+
+.widget_footer_local {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    color: #5c5c5c;
+    line-height: 20px;
+    font-size: 14px;
+    margin-right: 10px;
+    width: 100%;
+}
+
+.widget_footer_local_contacts a {
+    color: #acacac;
+}
+
+.widget_footer_socialnetwork {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.widget_footer_socialnetwork_link {
+    background-color: #212121;
+    width: 30px;
+    height: 30px;
+    margin-right: 5px;
+}
+
+.widget_footer_socialnetwork_link a {
+    display: block;
+    text-decoration: none;
+    padding: 20px;
+}
+
+.widget_footer_post_text {
+    margin-bottom: 15px;
+}
+
+.widget_footer_post_text {
+    color: #ccc;
+    font-size: 14px;
+    line-height: 20px;
+    padding-right: 35px;
+    text-align: justify;
+}
+
+.widget_footer_post_year {
+    color: #39aae1;
+    font-size: 13px;
+}
+
+.tweet_text {
+    color: #5c5c5c;
+}
+
+.tweet_text a {
+    color: #ccc;
+}
+
+.widget_footer_local_phone a {
+    color: #acacac;
 }
